[224] implemented notification for tagged users and event notification.